// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`full output snapshots > snapshot: all-private migration 1`] = `
"#
# Migrated from .env — all variables will be encrypted.
#
# Docs: https://vars-docs.vercel.app/docs/file-format
#
env(dev, staging, prod)

DATABASE_URL = "postgres://localhost/mydb"
SECRET_KEY = "abc123"
REDIS_URL = "redis://localhost"
SMTP_HOST = "smtp.example.com"
SMTP_USER = "user"
SMTP_PASS = "pass"
AWS_KEY = "key"
AWS_SECRET = "secret"
"
`;

exports[`full output snapshots > snapshot: boilerplate 1`] = `
"#
# Replace the example variables below with your own.
# \`public\` = plaintext (not encrypted). Remove it to encrypt a var.
#
# Docs: https://vars-docs.vercel.app/docs/file-format
#"
`;

exports[`full output snapshots > snapshot: large Next.js + Vite migration 1`] = `
"#
# Migrated from .env — check that public/encrypted classification is correct.
# Variables with NEXT_PUBLIC_, VITE_ prefixes were marked public.
#
# \`public\` vars are plaintext and will not be encrypted. If any of these
# should be secret, remove the \`public\` keyword to enable encryption.
#
# Docs: https://vars-docs.vercel.app/docs/file-format
#
env(dev, staging, prod)

public NEXT_PUBLIC_API_URL = "https://api.example.com"
public NEXT_PUBLIC_APP_NAME = "my-app"
public NEXT_PUBLIC_SENTRY_DSN = "https://sentry.io/123"
public VITE_ADMIN_URL = "https://admin.example.com"
DATABASE_URL = "postgres://localhost/mydb"
SECRET_KEY = "abc123"
REDIS_URL = "redis://localhost"
SMTP_HOST = "smtp.example.com"
"
`;

exports[`full output snapshots > snapshot: small Expo migration 1`] = `
"#
# \`public\` = plaintext (not encrypted). Remove it to encrypt a var.
#
# Docs: https://vars-docs.vercel.app/docs/file-format
#
env(dev, staging, prod)

public EXPO_PUBLIC_API_URL = "https://api.example.com"
public EXPO_PUBLIC_SENTRY_DSN = "https://sentry.io/123"
API_SECRET = "abc"
"
`;
